fix(#8): center correctly the slides on iOS

--- a/src/components/deck/deckdeckgo-deck/deckdeckgo-deck.scss
+++ b/src/components/deck/deckdeckgo-deck/deckdeckgo-deck.scss
@@ -3,6 +3,7 @@ div.deckgo-deck {
 
   position: fixed;
   top: 0;
+  bottom: 0;
 
   --transformX: 0px;
   --transformXDuration: 0ms;
